Made most of the changes from my review earlier today.  There are a page and a half left to do, and then I still need to go back and add ps and pn cases for the new reduction rules I added too.

--- a/proof/cases/preservation/h:head-cons.tex
+++ b/proof/cases/preservation/h:head-cons.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})\rightarrow e_{H}^{1}$
 
-$\Gamma\vdash_{H}\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):T$ by premise and and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}$, $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T_{1}]$ and $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{1}:T$ because $T_{1}=T$.
+$\Gamma\vdash_{H}\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T_{1}]$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{1}:T$ because $T_{1}=T$.
 \end{case}
