--- a/proof/cases/preservation/hs+ms:list-cons.tex
+++ b/proof/cases/preservation/hs+ms:list-cons.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{[T_{1}]}AS\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}AS\;v_{S}^{1})\;(^{[T_{1}]}AS\;v_{S}^{2})$ where $A\in\lbrace H,M\rbrace$
+$^{[T_{1}]}AS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})\rightarrow\mathtt{cons}$ $(^{T_{1}}AS$ $v_{S}^{1})$ $(^{[T_{1}]}AS$ $v_{S}^{2})$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{A}{^{[T_{1}]}A}S\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}v_{S}^{1}:TST$, and $\Gamma\vdash_{S}v_{S}^{2}:TST$ by inversion.  $\Gamma\vdash_{A}{^{T_{1}}A}S\;v_{S}^{1}:T_{1}$, $\Gamma\vdash_{A}{^{[T_{1}]}A}S\;v_{S}^{2}:[T_{1}]$, and $\Gamma\vdash_{A}\mathtt{cons}\;(^{T_{1}}AS\;v_{S}^{1})\;(^{[T_{1}]}AS\;v_{S}^{2}):[T_{1}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{cons}\;(^{T_{1}}AS\;v_{S}^{1})\;(^{[T_{1}]}AS\;v_{S}^{2}):T$ because $[T_{1}]=T$.
+$\Gamma\vdash_{A}{^{[T_{1}]}A}S$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}v_{S}^{1}:TST$, $\Gamma\vdash_{S}v_{S}^{2}:TST$, and $\Gamma\vdash_{S}\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}:TST$ by inversion (Lemma \ref{i}).  $T=[T_{1}]$, $\Gamma\vdash_{A}{^{T_{1}}A}S$ $v_{S}^{1}:T_{1}$, $\Gamma\vdash_{A}{^{[T_{1}]}A}S$ $v_{S}^{2}:[T_{1}]$, and $\Gamma\vdash_{A}\mathtt{cons}$ $(^{T_{1}}AS$ $v_{S}^{1})$ $(^{[T_{1}]}AS$ $v_{S}^{2}):[T_{1}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{cons}$ $(^{T_{1}}AS$ $v_{S}^{1})$ $(^{[T_{1}]}AS$ $v_{S}^{2}):T$ because $[T_{1}]=T$.
 \end{case}
