--- a/proof/cases/preservation/hs+ms:number.tex
+++ b/proof/cases/preservation/hs+ms:number.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $^{N}AS\;\overline{n}\rightarrow\overline{n}$ where $A\in\lbrace H,M\rbrace$
 
-$\vdash_{A}{^{N}A}S\;\overline{n}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.
+$\vdash_{A}{^{N}A}S\;\overline{n}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n}:N$ and $T=N$ by inversion (Lemma \ref{i}) and uniqueness of types.
 \end{case}
