--- a/proof/cases/progress/ab.tex
+++ b/proof/cases/progress/ab.tex
@@ -16,7 +16,7 @@ $e_{B}^{1}=\lambda x_{1}:T_{1}.e_{B}^{2}$ by canonical forms (Lemma \ref{cf}).  
 \begin{subcase}
 $T=\forall X_{1}.T_{1}$
 
-$e_{B}^{1}\in\lbrace\Lambda X_{1}.e_{B}^{2},{^{\forall X_{1}.T_{1}}B}S\;v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{B}^{1}=\Lambda X_{1}.e_{B}^{2}$ then $^{\forall X_{1}.T_{1}}AB^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{B}^{2})\rightarrow\Lambda X_{2}.(^{T_{1}[X_{2}/X_{1}]}AB^{T_{1}[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{B}^{2})\;\lbrace X_{2}\rbrace))$.  If $e_{B}^{1}={^{\forall X_{1}.T_{1}}B}S\;v_{S}$ then $^{\forall X_{1}.T_{1}}AB^{\forall X_{1}.T_{1}}\;(^{\forall X_{1}.T_{1}}BS\;v_{S})\rightarrow{^{\forall X_{1}.T_{1}}A}S\;v_{S}$.
+$e_{B}^{1}\in\lbrace\Lambda X_{1}.e_{B}^{2},{^{\forall X_{1}.T_{1}}B}S\;v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{B}^{1}=\Lambda X_{1}.e_{B}^{2}$ then $^{\forall X_{1}.T_{1}}AB^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{B}^{2})\rightarrow\Lambda X_{1}.(^{T_{1}}AB^{T_{1}}\;e_{B}^{2})$.  If $e_{B}^{1}={^{\forall X_{1}.T_{1}}B}S\;v_{S}$ then $^{\forall X_{1}.T_{1}}AB^{\forall X_{1}.T_{1}}\;(^{\forall X_{1}.T_{1}}BS\;v_{S})\rightarrow{^{\forall X_{1}.T_{1}}A}S\;v_{S}$.
 \end{subcase}
 \begin{subcase}
 $T=[T_{1}]$
