--- a/proof/cases/preservation/fix.tex
+++ b/proof/cases/preservation/fix.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{fix}\;(\lambda x:T_{1}.e_{A})\rightarrow e_{A}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{A}))/x]$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{A}\mathtt{fix}\;(\lambda x:T_{1}.e_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}:T_{1}$, and $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{A}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{A}))/x]:T$ because $T_{1}=T$.
+$\Gamma\vdash_{A}\mathtt{fix}\;(\lambda x:T_{1}.e_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{A}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{A}))/x]:T$ because $T_{1}=T$.
 \end{case}
