--- a/proof/cases/preservation/hs+ms:universal.tex
+++ b/proof/cases/preservation/hs+ms:universal.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $(^{\forall X.T_{1}}AS\;v_{S})\;\lbrace T_{2}\rbrace\rightarrow{^{T_{1}[T_{2}^{a}/X]}A}S\;v_{S}$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{A}(^{\forall X.T_{1}}AS\;v_{S})\;\lbrace T_{2}\rbrace:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}[T_{2}/X]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}v_{S}:TST$ by inversion.  $\Gamma\vdash_{A}{^{T_{1}[T_{2}^{a}/X]}A}S\;v_{S}:T_{1}[T_{2}^{a}/X][T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}{^{T_{1}[T_{2}^{a}/X]}A}S\;v_{S}:T$ because $T_{1}[T_{2}^{a}/X][T_{i}/T_{i}^{a}]=T_{1}[T_{2}/X]=T$.
+$\Gamma\vdash_{A}(^{\forall X.T_{1}}AS\;v_{S})\;\lbrace T_{2}\rbrace:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}v_{S}:TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{A}{^{\forall X.T_{1}}A}S\;v_{S}:\forall X.T_{1}$ and $T=T_{1}[T_{2}/X]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}{^{T_{1}[T_{2}^{a}/X]}A}S\;v_{S}:T_{1}[T_{2}^{a}/X][T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}{^{T_{1}[T_{2}^{a}/X]}A}S\;v_{S}:T$ because $T_{1}[T_{2}^{a}/X][T_{i}/T_{i}^{a}]=T_{1}[T_{2}/X]=T$.
 \end{case}
