--- a/proof/cases/preservation/if-false.tex
+++ b/proof/cases/preservation/if-false.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{if0}\;\overline{n}\;e_{A}^{1}\;e_{A}^{2}\rightarrow e_{A}^{2}\;(n\neq0)$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{A}\mathtt{if0}\;\overline{n}\;e_{A}^{1}\;e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}$ and $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{2}:T$ because $T_{1}=T$.
+$\Gamma\vdash_{A}\mathtt{if0}\;\overline{n}\;e_{A}^{1}\;e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$ and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{2}:T$ because $T_{1}=T$.
 \end{case}
