--- a/proof/cases/preservation/hs:list-sh-cons.tex
+++ b/proof/cases/preservation/hs:list-sh-cons.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $^{[T_{1}]}HS\;(SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$
 
-$^{[T_{1}]}HS\;(SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):TST$ by inversion.  $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T_{1}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:T$ because $[T_{1}]=T$.
+$^{[T_{1}]}HS\;(SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):TST$ by inversion.  $T=[T_{1}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:T$ because $[T_{1}]=T$.
 \end{case}
