--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -34,9 +34,11 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/mh:list-tail-cons.tex}
 \input{cases/preservation/hs+ms:list-cons.tex}
 \input{cases/preservation/hs:list-sh-cons.tex}
+\input{cases/preservation/ms:list-sh-cons.tex}
 \input{cases/preservation/sh:list-head-cons.tex}
 \input{cases/preservation/sh:list-tail-cons.tex}
 \input{cases/preservation/sm:list-cons.tex}
+\input{cases/preservation/sm:list-mh-cons.tex}
 \input{cases/preservation/hm+mh:list-nil.tex}
 \input{cases/preservation/hs+ms:list-nil.tex}
 \input{cases/preservation/hs+ms:list-error.tex}
