--- a/model/hit.tex
+++ b/model/hit.tex
@@ -1,11 +1,11 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$e_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;e_{M}\;\vert\;^{T}HS\;e_{S}$ \\
-$v_{H}$ & $=$ & $\cdots\;\vert\;^{\forall X.T}HS\;v_{S}\;\vert\;^{L}HS\;v_{S}$ \\
-$T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
+$e_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $e_{M}$ $\vert$ $^{T}HS$ $e_{S}$ \\
+$v_{H}$ & $=$ & $\cdots$ $\vert$ $^{\forall X.T}HS$ $v_{S}$ $\vert$ $^{L}HS$ $v_{S}$ \\
+$T$ & $=$ & $\cdots$ $\vert$ $L$ $\vert$ $T^{a}$ \\
 $a$ & $=$ & Type labels (a, b, \ldots) \\
-$E_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;^{T}HS\;E_{S}$
+$E_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
 \end{center}
 \caption{Haskell interoperation terms}
