--- a/model/mct.tex
+++ b/model/mct.tex
@@ -2,16 +2,16 @@
 \onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
-$e_{M}$ & = & $x\;\vert\;v_{M}\;\vert\;e_{M}\;e_{M}\;\vert\;e_{M}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{M}\;e_{M}\;e_{M}\;\vert\;\mathtt{cons}\;e_{M}\;e_{M}\;\vert\;o\;e_{M}\;e_{M}\;\vert\;f\;e_{M}$ \\
-&& $\vert\;\mathtt{fix}\;e_{M}$ \\
-$v_{M}$ & = & $\overline{n}\;\vert\;\lambda x:T.e_{M}\;\vert\;\Lambda X.e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;v_{M}\;\vert\;\mathtt{nil}^{T}$ \\
-$x$ & = & Variables \\
-$o$ & = & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
-$f$ & = & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
-$T$ & = & $N\;\vert\;X\;\vert\;T\rightarrow T\;\vert\;\forall X.T\;\vert\;[T]$ \\
-$X$ & = & Type variables \\
-$E_{M}$ & = & $[\,]_{M}\;\vert\;E_{M}\;e_{M}\;\vert\;v_{M}\;E_{M}\;\vert\;E_{M}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;E_{M}\;e_{M}\;e_{M}$ \\
-&& $\vert\;\mathtt{cons}\;E_{M}\;e_{M}\;\vert\;\mathtt{cons}\;v_{M}\;E_{M}\;\vert\;o\;E_{M}\;e_{M}\;\vert\;o\;v_{M}\;E_{M}\;\vert\;f\;E_{M}\;\vert\;\mathtt{fix}\;E_{M}$
+$e_{M}$ & $=$ & $x$ $\vert$ $v_{M}$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ \\
+&& $\vert$ $\mathtt{fix}$ $e_{M}$ \\
+$v_{M}$ & $=$ & $\overline{n}$ $\vert$ $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $\mathtt{nil}^{T}$ \\
+$x$ & $=$ & Variables \\
+$o$ & $=$ & $\mathtt{+}$ $\vert$ $\mathtt{-}$ \\
+$f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
+$T$ & $=$ & $N$ $\vert$ $X$ $\vert$ $T\rightarrow T$ $\vert$ $\forall X.T$ $\vert$ $[T]$ \\
+$X$ & $=$ & Type variables \\
+$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ \\
+&& $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
 \end{center}
 \caption{ML core terms}
