--- a/model/sit.tex
+++ b/model/sit.tex
@@ -1,9 +1,9 @@
 \begin{figure}
 \begin{center}
 \begin{tabular}{lcl}
-$e_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;e_{H}\;\vert\;SM^{T}\;e_{M}$ \\
-$v_{S}$ & $=$ & $\cdots\;\vert\;SH^{[T]}\;(\mathtt{cons}\;e_{H}\;e_{H})\;\vert\;SH^{T^{a}}\;e_{H}\;\vert\;SM^{T^{a}}\;v_{M}$ \\
-$E_{S}$ & $=$ & $\cdots\;\vert\;SH^{T}\;E_{H}\;\vert\;SM^{T}\;E_{M}$
+$e_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $e_{H}$ $\vert$ $SM^{T}$ $e_{M}$ \\
+$v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $e_{H}$ $\vert$ $SM^{T^{a}}$ $v_{M}$ \\
+$E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
 \end{center}
 \caption{Scheme interoperation terms}
