Removed math spaces where possible from pn cases and all lemmas and pn theorem.

--- a/proof/cases/preservation/hm+mh:function.tex
+++ b/proof/cases/preservation/hm+mh:function.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{T_{1}\rightarrow T_{2}}AB^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{B})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{B})\;(^{T_{1}}BA^{T_{1}}\;x_{2})))$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
+$^{T_{1}\rightarrow T_{2}}AB^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{B})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{B})$ $(^{T_{1}}BA^{T_{1}}$ $x_{2})))$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
 
-$\Gamma\vdash_{A}{^{T_{1}\rightarrow T_{2}}}AB^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{B}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{B}\lambda x_{1}:T_{1}.e_{B}:T_{1}\rightarrow T_{2}$, $T=T_{1}\rightarrow T_{2}$, $\Gamma,x_{2}:T_{1}\vdash_{A}x_{2}:T_{1}$, $\Gamma,x_{2}:T_{1}\vdash_{B}{^{T_{1}}B}A^{T_{1}}\;x_{2}:T_{1}$, $\Gamma,x_{2}:T_{1}\vdash_{B}(\lambda x_{1}:T_{1}.e_{B})\;(^{T_{1}}BA^{T_{1}}\;x_{2}):T_{2}$, $\Gamma,x_{2}:T_{1}\vdash_{A}{^{T_{2}}A}B^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{B})\;(^{T_{1}}BA^{T_{1}}\;x_{2})):T_{2}$, and $\Gamma\vdash_{A}\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{B})\;(^{T_{1}}BA^{T_{1}}\;x_{2}))):T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{B})\;(^{T_{1}}BA^{T_{1}}\;x_{2}))):T$ because $T_{1}\rightarrow T_{2}=T$.
+$\Gamma\vdash_{A}{^{T_{1}\rightarrow T_{2}}}AB^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{B}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{B}\lambda x_{1}:T_{1}.e_{B}:T_{1}\rightarrow T_{2}$, $T=T_{1}\rightarrow T_{2}$, $\Gamma,x_{2}:T_{1}\vdash_{A}x_{2}:T_{1}$, $\Gamma,x_{2}:T_{1}\vdash_{B}{^{T_{1}}B}A^{T_{1}}$ $x_{2}:T_{1}$, $\Gamma,x_{2}:T_{1}\vdash_{B}(\lambda x_{1}:T_{1}.e_{B})$ $(^{T_{1}}BA^{T_{1}}$ $x_{2}):T_{2}$, $\Gamma,x_{2}:T_{1}\vdash_{A}{^{T_{2}}A}B^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{B})$ $(^{T_{1}}BA^{T_{1}}$ $x_{2})):T_{2}$, and $\Gamma\vdash_{A}\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{B})$ $(^{T_{1}}BA^{T_{1}}$ $x_{2}))):T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\lambda x_{2}:T_{1}.(^{T_{2}}AB^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{B})$ $(^{T_{1}}BA^{T_{1}}$ $x_{2}))):T$ because $T_{1}\rightarrow T_{2}=T$.
 \end{case}
