--- a/proof/cases/preservation/hs+ms:label-error.tex
+++ b/proof/cases/preservation/hs+ms:label-error.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{T_{1}^{a}}AS\;v_{S}\rightarrow{^{T_{1}^{a}}A}S\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})$ $(v_{S}\neq SA^{T_{1}^{a}}\;B_{A})$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
+$^{T_{1}^{a}}AS$ $v_{S}\rightarrow{^{T_{1}^{a}}A}S$ $(\mathtt{wrong}$ $\mathrm{``Parametricity}$ $\mathrm{violated"})$ $(v_{S}\neq SA^{T_{1}^{a}}$ $B_{A})$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
 
-$\Gamma\vdash_{A}{^{T_{1}^{a}}A}S\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}:TST$ by inversion.  $^{T_{1}^{a}}AS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}):T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $^{T_{1}^{a}}AS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}):T$ because $T_{1}^{a}[T_{i}/T_{i}^{a}]=T$.
+$\Gamma\vdash_{A}{^{T_{1}^{a}}A}S$ $v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}$ $\mathrm{``Parametricity}$ $\mathrm{violated"}:TST$ by inversion.  $^{T_{1}^{a}}AS$ $(\mathtt{wrong}$ $\mathrm{``Parametricity}$ $\mathrm{violated"}):T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $^{T_{1}^{a}}AS$ $(\mathtt{wrong}$ $\mathrm{``Parametricity}$ $\mathrm{violated"}):T$ because $T_{1}^{a}[T_{i}/T_{i}^{a}]=T$.
 \end{case}
