--- a/proof/cases/preservation/sh+sm:function.tex
+++ b/proof/cases/preservation/sh+sm:function.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\rightarrow\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\;(^{T_{1}}AS\;x_{2})))$ where $A\in\lbrace H,M\rbrace$
+$SA^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\rightarrow\lambda x_{2}.(SA^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})$ $(^{T_{1}}AS$ $x_{2})))$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{S}SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}):TST$ by premise.  $\Gamma\vdash_{A}\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}:T_{1}[T_{i}/T_{i}^{a}]\rightarrow T_{2}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma,x_{2}:TST\vdash_{S}x_{2}:TST$ by inversion.  $\Gamma,x_{2}:TST\vdash_{A}{^{T_{1}}A}S\;x_{2}:T_{1}[T_{i}/T_{i}^{a}]$ and $\Gamma,x_{2}:TST\vdash_{A}(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\;(^{T_{1}}AS\;x_{2}):T_{2}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma,x_{2}:TST\vdash_{S}SA^{T_{2}}\;((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\;(^{T_{1}}AS\;x_{2})):TST$ and $\Gamma\vdash_{S}\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})\;(^{T_{1}}AS\;x_{2}))):TST$ by inversion.
+$\Gamma\vdash_{S}SA^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}):TST$ by premise.  $\Gamma\vdash_{A}\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}:T_{1}[T_{i}/T_{i}^{a}]\rightarrow T_{2}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma,x_{2}:TST\vdash_{S}x_{2}:TST$ by inversion.  $\Gamma,x_{2}:TST\vdash_{A}{^{T_{1}}A}S$ $x_{2}:T_{1}[T_{i}/T_{i}^{a}]$ and $\Gamma,x_{2}:TST\vdash_{A}(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})$ $(^{T_{1}}AS$ $x_{2}):T_{2}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma,x_{2}:TST\vdash_{S}SA^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})$ $(^{T_{1}}AS$ $x_{2})):TST$ and $\Gamma\vdash_{S}\lambda x_{2}.(SA^{T_{2}}$ $((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A})$ $(^{T_{1}}AS$ $x_{2}))):TST$ by inversion.
 \end{case}
