--- a/proof/cases/preservation/subtraction.tex
+++ b/proof/cases/preservation/subtraction.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$-\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$ where $A\in\lbrace H,M\rbrace$
+$-$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$ where $A\in\lbrace H,M\rbrace$
 
-$\vdash_{A}-\;\overline{n_{1}}\;\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:T$ because $N=T$.
+$\vdash_{A}-$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:T$ because $N=T$.
 \end{case}
