--- a/proof/cases/progress/field-m.tex
+++ b/proof/cases/progress/field-m.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{M}=f\;e_{M}^{1}$
+$e_{M}=f$ $e_{M}^{1}$
 
-$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{cons}\;e_{M}^{3}\;e_{M}^{4},\mathtt{nil}^{T},{^{[T]}M}H^{[T]}\;v_{H}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}=\mathtt{cons}\;e_{M}^{3}\;e_{M}^{4}$ then $\mathtt{hd}\;(\mathtt{cons}\;e_{M}^{3}\;e_{M}^{4})\rightarrow e_{M}^{3}$ or $\mathtt{tl}\;(\mathtt{cons}\;e_{M}^{3}\;e_{M}^{4})\rightarrow e_{M}^{4}$.  If $e_{M}^{1}=\mathtt{nil}^{T}$ then $\mathtt{hd}\;\mathtt{nil}^{T}\rightarrow{^{T}M}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ and $\mathtt{tl}\;\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{M}^{1}={^{[T]}M}H^{[T]}\;v_{H}$ then $v_{H}:[T]$ by inversion and uniqueness of types and $v_{H}\in\lbrace\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2},\mathtt{nil}^{T}\rbrace$ by canonical forms.  If $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ then $\mathtt{hd}\;(^{[T]}MH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow{^{T}M}H^{T}\;e_{H}^{1}$ and $\mathtt{tl}\;(^{[T]}MH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow{^{[T]}M}H^{[T]}\;e_{H}^{2}$.  If $v_{H}=\mathtt{nil}^{T}$ then $\mathtt{hd}\;\mathtt{nil}^{T}\rightarrow{^{T}M}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ and $\mathtt{tl}\;\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f\;e_{M}^{1}\rightarrow f\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f\;e_{M}^{1}\rightarrow f\;e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{M}^{1}$ is a value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{M}^{1}$ is a value then $e_{M}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{M}^{1}\in\lbrace\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4},\mathtt{nil}^{T},{^{[T]}M}H^{[T]}$ $v_{H}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{M}^{1}=\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4}$ then $\mathtt{hd}$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{3}$ or $\mathtt{tl}$ $(\mathtt{cons}$ $e_{M}^{3}$ $e_{M}^{4})\rightarrow e_{M}^{4}$.  If $e_{M}^{1}=\mathtt{nil}^{T}$ then $\mathtt{hd}$ $\mathtt{nil}^{T}\rightarrow{^{T}M}S$ $(\mathtt{wrong}$ \emph{``Empty list"}$)$ and $\mathtt{tl}$ $\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{M}^{1}={^{[T]}M}H^{[T]}$ $v_{H}$ then $v_{H}:[T]$ by inversion and uniqueness of types and $v_{H}\in\lbrace\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2},\mathtt{nil}^{T}\rbrace$ by canonical forms.  If $v_{H}=\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}$ then $\mathtt{hd}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{T}M}H^{T}$ $e_{H}^{1}$ and $\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))\rightarrow{^{[T]}M}H^{[T]}$ $e_{H}^{2}$.  If $v_{H}=\mathtt{nil}^{T}$ then $\mathtt{hd}$ $\mathtt{nil}^{T}\rightarrow{^{T}M}S$ $(\mathtt{wrong}$ \emph{``Empty list"}$)$ and $\mathtt{tl}$ $\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f$ $e_{M}^{1}\rightarrow f$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $f$ $e_{M}^{1}\rightarrow f$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
