--- a/proof/cases/preservation/hm+mh:list-nil.tex
+++ b/proof/cases/preservation/hm+mh:list-nil.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{[T_{1}]}AB^{[T_{1}]}\;\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
+$^{[T_{1}]}AB^{[T_{1}]}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
 
-$\Gamma\vdash_{A}{^{[T_{1}]}A}B^{[T_{1}]}\;\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$ and $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:T$ because $[T_{1}]=T$.
+$\Gamma\vdash_{A}{^{[T_{1}]}A}B^{[T_{1}]}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$ and $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:T$ because $[T_{1}]=T$.
 \end{case}
